# software-generation-compiler

./: Dockerfile  README.md  pyproject.toml  requirements.txt
compiler/: config.py  main.py
compiler/evaluation/: framework.py  prompts.py
compiler/llm/: client.py
compiler/pipeline/: intent_extraction.py  orchestrator.py  refinement.py  schema_generation.py  system_design.py
compiler/runtime/: generator.py
compiler/schemas/: app_config.py  design.py  intent.py  pipeline_result.py
compiler/validation/: repair.py  validator.py
frontend/: app.js  index.html  style.css
